# mcp-attest

./: .gitignore  COMPLETION_REPORT.md  DECISIONS.md  LICENSE  README.md  pyproject.toml
docs/: PATENT_NOTES.md  PROTOCOL.md
examples/: demo.py  mock_mcp_client.py  mock_mcp_server.py
scripts/: tamper_attack.py
src/mcp_attest/: __init__.py  canonical.py  cli.py  crypto.py  entry.py  errors.py  log.py  proxy.py  verifier.py
tests/: conftest.py  test_canonical.py  test_cli.py  test_crypto.py  test_demo.py  test_entry.py  test_equivocation.py  test_errors.py  test_log.py  test_mock_server.py  test_proxy.py  test_public_api.py  test_tamper.py  test_verifier.py
