[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "mcp-attest"
version = "0.1.0"
description = "Tamper-evident cryptographic attestation for Model Context Protocol (MCP) tool calls"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "mcp-attest contributors" },
]
keywords = [
    "mcp",
    "attestation",
    "audit",
    "cryptography",
    "ed25519",
    "transparency-log",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Logging",
]
dependencies = [
    "cryptography>=42.0",
    "click>=8.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
mcp-attest = "mcp_attest.cli:main"

[project.urls]
Homepage = "https://github.com/norbix93/mcp-attest"
Repository = "https://github.com/norbix93/mcp-attest"
Issues = "https://github.com/norbix93/mcp-attest/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_attest"]

[tool.hatch.build.targets.sdist]
include = [
    "src/mcp_attest",
    "tests",
    "examples",
    "docs",
    "README.md",
    "DECISIONS.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
]

[tool.coverage.run]
branch = true
source = ["src/mcp_attest"]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "RUF",  # ruff-specific rules
    "SIM",  # flake8-simplify
    "PT",   # pytest style
    "PTH",  # use pathlib
    "D",    # pydocstyle
]
ignore = [
    "D100",  # missing module docstring (allow brief modules)
    "D104",  # missing docstring in __init__.py packages
    "D107",  # missing docstring on __init__ (use class docstring)
    "D203",  # one-blank-line-before-class (incompatible with D211)
    "D213",  # multi-line-summary-second-line (incompatible with D212)
    "E501",  # line too long; let formatter handle it
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "N802"]
"examples/*" = ["D", "T201"]
"scripts/*" = ["D", "T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
show_error_codes = true
files = ["src/mcp_attest"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
